# AutoDiffCPP

./: .gitignore  AutoDiff.code-workspace  CMakeLists.txt  Dockerfile  README.md  clang_cxx14.cmake
.github/workflows/: cmake.yml
libautodiff/common/: exceptions.cpp  exceptions.hpp  macros.hpp
libautodiff/core/graph/: data.hpp  session.cpp  session.hpp
libautodiff/core/graph/nodes/: node.cpp  node.hpp  nodes_handler.hpp  nodes_handler.tpp  variable.cpp  variable.hpp
